--- a/config.toml
+++ b/config.toml
@@ -17,24 +17,15 @@ buildDrafts = true
     name = "Home"
     title = "Home"
     url = "/"
+  [[menu.resources]]
+    identifier = "Resources"
+    name = "Resources"
+    title = "Resources"
+    url = "/resources/"
   [[menu.kyr]]
     identifier = "Know Your Rights"
     name = "Know Your Rights"
     title = "Know Your Rights"
     url = "/kyr/"
-  [[menu.contact]]
-    identifier = "Contact"
-    name = "Contact"
-    title = "Contact"
-    url = "/contact"
-  [[menu.reading]]
-    identifier = "Reading"
-    name = "Reading"
-    title = "Reading"
-    url = "/reading"
-  [[menu.history]]
-    identifier = "History"
-    name = "History"
-    title = "History"
-    url = "/history"
+
 
